# timetable-app

./: .env.example  .gitignore  ADMIN_SETUP.md  CALENDAR_INTEGRATION.md  README.md  SECURITY.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  requirements.txt  run_desktop.py  timetabling.db
backend/alembic/: env.py
backend/alembic/versions/: 20260404_0001_initial_schema.py  20260405_0002_user_teacher_scope.py
backend/app/: import_legacy_sqlite.py  main.py  seed.py
backend/app/api/: deps.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  audit_log.py  availability.py  base.py  blocked_time.py  preference.py  (+6 more)
backend/tests/: conftest.py  test_api_access_scope.py  test_api_auth.py  test_api_matches.py  test_calendar_and_runtime.py  test_cors.py  test_matching_engine.py  test_schedule_occurrences.py  test_scheduling_validation.py  test_time_utils.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/components/: access-denied.js  app-shell.js  auth-gate.js  auth-provider.js  page-header.js  time-window-editor.js  weekly-board.js
frontend/lib/: api.js  auth-transport.mjs  roles.js
frontend/tests/: auth-transport.test.mjs
scripts/: build-backend-sidecar.ps1  build-desktop.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
timetabling_prompt_pack/: 01_master_prompt.txt  02_phase1_prompt.txt  03_phase2_prompt.txt  04_phase3_prompt.txt  AGENTS.md  PRODUCT_SPEC.md  README.md  SCHEMA_BRIEF.md  TEST_PLAN.md
(+42 files in other folders)
