[package]
name = "timetabling-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
portpicker = "0.1.1"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tokio = { version = "1.39.2", features = ["macros", "process", "rt-multi-thread", "time"] }

